# rag-regulation-bancaire

./: .gitignore  APP_READY.md  CHANGELOG.md  CONNECTION.md  CONTRIBUTING.md  FEATURE_SOURCE_HIGHLIGHTING.md  GUIDE_AMELIORATIONS_RAG.md  GUIDE_DEMARRAGE.md  LLM-product-groupe-EELC.pptx  METRICS_RAG.md  QUICK_START.md  RAG_AUDIT_ET_AMELIORATIONS.md  README.md  README_backup.md  SETUP_NEW_MACHINE.md  index.html  package-lock.json  package.json  pyproject.toml  run-backend.sh  run-frontend.sh  run.sh  upload_all.py  ~$LLM-product-groupe-EELC.pptx
backend/: .gitignore  CHUNKING_ANALYSIS.md  RAG_IMPROVEMENTS_PRO.md  README.md  SETUP.md  env.example  pyproject.toml  run.py  test_formatting.py
backend/app/: main.py
backend/app/api/: chat.py  documents.py  health.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  document.py
backend/app/services/: citation_validator.py  document_processor.py  embedding_service.py  rag_service.py  reranker_service.py  text_extractor.py
backend/scripts/: create_indexes.py  delete_all_documents.py  init_db.py  reprocess_all_documents.py  search_in_chunks.py  test_rag_improvements.py  upload_all_documents.py
data/: README.md  generate_test_pdfs.py
src/: App.tsx  SSE_STREAMING_README.md  index.css
src/components/: ActionButtons.tsx  BackendLoadingScreen.tsx  ChatInterface.tsx  ChatMessage.tsx  CitationChip.tsx  DocumentUpload.tsx  HighlightedAnswer.tsx  LoadingAnimation.tsx  LoginModal.tsx  ObservabilityPanel.tsx  OnboardingTour.tsx  SessionHistory.tsx  UserProfile.tsx  sseStreamingUtils.ts
src/components/ui/: avatar.tsx
src/hooks/: useBackendHealth.ts
src/services/: api.ts
src/styles/: globals.css
